@@ -1,5 +1,12 @@
 {{$NEXT}}
 
+- If test_all_dependents() cannot find anything that depends on the given
+  module it runs `plan( skip_all => ... )` rather than `plan(0)`. The latter
+  causes the test to fail. While this should never really happen in normal use
+  it can be an issue when MetaCPAN is having problems (such as
+  https://github.com/metacpan/metacpan-web/issues/2139).
+
+
 0.26   2015-11-07
 
 - The previous release only had a partial fix for failures to resolve distro
